v3/crates/server/src/snapshots/server__backend__tests__hover_snapshot_ast_capture_inside_body.snap
---
source: crates/server/src/backend.rs
expression: md
---
`ast[lang](pattern)`

Match an ast-grep pattern against the cursor's active bytes. `lang` is
`rust` (`rs`) or `typescript` (`ts`).

Strict metavar grammar (bare `$NAME` / `$$$NAME` rejected):

- `${VAR}` — single-node capture. The surrounding identifier-char token
  run collapses to a synthetic `$SPRFSLOTN` and a named regex pulls
  `VAR` out of that slot's matched text. Use mid-token: `${TY}Error`
  matches `MyError` and binds `TY=My`.
- `$$${VAR}` — multi-node capture. The `$$$` prefix sits outside the
  carveout. Only legal with no identifier-char neighbours. Matched node
  texts join (space-separated) into one Synthesized capture under `VAR`.


---

**Pipe position:** step 1 / 1  
**Body grammar:** ast-grep pattern using `${VAR}` / `$$${VAR}`; lang via `[rust|ts]`  
**Config:** cwd fallback (no `.sprefa.toml` found)

| slug | rev | root |
| --- | --- | --- |

---

**Focused capture:** `$N` _(declared by `ast`)_  
Below: every cursor that binds `$N`, with the value linking back to its source span.

---

**Cursors after this op:**

_(no cursors emitted)_

**Total rows:** 0
